--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,17 @@ before_install:
 
 script:
   - docker run ruszczus/docker-react npm run test -- --coverage
+
+deploy:
+  provider:elasticbeanstalk
+  region: "eu-central-1"
+  app: "docker-react"
+  env: "DockerReact-env"
+  bucket_name: "elasticbeanstalk-eu-central-1-848957435488"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+access_key_id:
+  secure: $AWS_ACCESS_KEY
+secret_access_key:
+  secure: "$AWS_SECRET_KEY"
