--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t ruszczus/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run ruszczus/docker-react npm run test -- --coverage --exit
+  - docker run ruszczus/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
